Fix equipment status workflow and intervention synchronization